# gemini-content-enrichment

./: .gitignore  README.md  env.toml  mkdocs.yml  pyproject.toml
docs/: index.md  setup.md  workflow.md
src/api/: checks.py  product.py  server.py
src/cli/: main.py
src/commands/: big_query.py  enrichment.py  images.py  main.py  vocabulary.py
src/model/: __init__.py  api.py  chain.py  config.py  examples.py
src/utils/: ezcrypt.py  logging.py  retail.py  strings.py
src/worker/: main.py
tests/: conftest.py  test_config.py  test_product_enrichment.py
