[project]
name = "gemini-enrichment"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryan McGuinness",email = "rmcguinness@google.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tomlkit (>=0.13.2,<0.14.0)",
    "ratelimit (>=2.2.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "prettytable (>=3.14.0,<4.0.0)",
    "google-genai (>=1.0.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "google-cloud-trace (>=1.15.0,<2.0.0)"
]

[tool.poetry]
package-mode = true
packages = [
    { include = "cli", from = "src" },
    { include = "commands", from = "src" },
    { include = "model", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
